--- a/index.html
+++ b/index.html
@@ -1,1 +1,152 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Eshwar-Portfolio</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <meta name="google-site-verification" content="B3lPx8dJHFo8NerYOQdZ6E9RM4-LqiC4qhs3HiURK7E" />
+</head>
+<body>
+    
+    <!-- header -->
+    <header>
+        <div class="nav-bar">
+            <a href="#" class="logo">eshu</a>
+            <div class="navigation">
+                <div class="nav-items">
+                    <a href="#home">Home</a>
+                    <a href="#about">About</a>
+                    <a href="#skills">Skills</a>
+                    <a href="#projects">Projects</a>
+                    <a href="#contact">Contact</a> 
+                </div>
+            </div>
+        </div>
+    </header>
 
+    <!-- Home -->
+    <section class="home" id="home">
+        <div class="home-container flex-center">
+            <div class="info">
+                <h2>Hi, I am Eshwar</h2>
+                <h3>A Front-end Developer</h3>
+                <div class="media-icons">
+                    <a href="http://www.linkedin.com/in/eshwarnamala/"><i class="fab fa-linkedin"></i></a>
+                    <a href="http://www.github.com/eshwarnamala/"><i class="fab fa-github"></i></a>
+                    <a href="mailto:namalaeshwar0@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+                </div>
+                <!-- <p>I create Stunning websites for your business, Highly experienced in Web Design and Development</p> -->
+                <a href="" class="btn">Contact Me <i class="fas fa-arrow-circle-right"></i></a>
+            </div>
+            <div class="home-img">
+                <img src="./assets/eshwar.png" alt="">
+            </div>
+        </div>
+        <a href="#about" class="scroll-down"> Scroll down <i class="fas fa-arrow-down"></i></a>
+    </section>
+
+    <!-- about section -->
+    <section class="about section" id="about">
+        <div class="container flex-center">
+            <h1 class="section-title-01">About me</h1>
+            <h2 class="section-title-02">About me</h2>
+            <div class="content flex-center"> 
+                <div class="about-img">
+                    <img src="./assets/eshu2.jpg" alt="">
+                </div>
+                <div class="about-info">
+                    <div class="description">
+                        <h3>I'm Eshwar</h3>
+                        <h4>An undergrad Student in <span>GRIET - 2025</span></h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ipsa qui molestias autem ratione error eaque perferendis amet ducimus, obcaecati repellat explicabo dicta id voluptatibus accusamus delectus!</p>
+                    </div>
+                    <a href="" class="btn">Download CV <i class="fas fa-download"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Skills -->
+    <section class="skills section" id="skills">
+        <div class="container flex-center">
+            <h1 class="section-title-01">Education & Skills</h1>
+            <h2 class="section-title-02">Education & Skills</h2>
+            <div class="content">
+                <div class="skills-description">
+                    <h3>Education and Skills</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam saepe obcaecati officia vel sunt rem ipsum minima deleniti eaque dolorum, aspernatur iusto.</p>
+                </div>
+                <div class="skills-info">
+                    <div class="education-all">
+                        <h4><label for="">Education</label></h4>
+                        <ul class="edu-list">
+                            <li class="item">
+                                <span class="year">2021 - 2025</span>
+                                <p><span>B.Tech in CSBS</span> - GRIET College, Hyderabad, Telangana</p>
+                            </li>
+                            <li class="item">
+                                <span class="year">2019 - 2021</span>
+                                <p><span>Intermediate - MPC</span> - Srichaitanya College, Hyderabad, Telangana</p>
+                            </li>
+                            <li class="item">
+                                <span class="year">2011 - 2018</span>
+                                <p><span>Secondary School Education</span> - KBS High School, Rudragudem, Warangal Rural</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="education">
+                        <h4><label for="">Skills</label></h4>
+                        <ul class="bars">
+                            <li class="bar">
+                                <div class="info">
+                                    <span>C++</span>
+                                    <span>90%</span>
+                                </div>
+                                <div class="line c++"></div>
+                            </li>
+                            <li class="bar">
+                                <div class="info">
+                                    <span>Python</span>
+                                    <span>80%</span>
+                                </div>
+                                <div class="line python"></div>
+                            </li>
+                            <li class="bar">
+                                <div class="info">
+                                    <span>HTML</span>
+                                    <span>90%</span>
+                                </div>
+                                <div class="line html"></div>
+                            </li>
+                            <li class="bar">
+                                <div class="info">
+                                    <span>CSS</span>
+                                    <span>80%</span>
+                                </div>
+                                <div class="line css"></div>
+                            </li>
+                            <li class="bar">
+                                <div class="info">
+                                    <span>JavaScript</span>
+                                    <span>75%</span>
+                                </div>
+                                <div class="line javascript"></div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <script src="js/script.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+
+</body>
+</html>
