--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <h4>An undergrad Student in <span>GRIET - 2025</span></h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ipsa qui molestias autem ratione error eaque perferendis amet ducimus, obcaecati repellat explicabo dicta id voluptatibus accusamus delectus!</p>
                     </div>
-                    <a href="" class="btn">Download CV <i class="fas fa-download"></i></a>
+                    <a href="https://drive.google.com/file/d/19-XyLGUkHTnkwsKnJAAGFUAI0LEJniP3/view?usp=sharing" class="btn">Download CV <i class="fas fa-download"></i></a>
                 </div>
             </div>
         </div>
