--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="description">
                         <h3>I'm Eshwar</h3>
                         <h4>An undergrad Student in <span>GRIET - 2025</span></h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ipsa qui molestias autem ratione error eaque perferendis amet ducimus, obcaecati repellat explicabo dicta id voluptatibus accusamus delectus!</p>
+                        <p>I am a student who is passionate about learning. This website is a showcase of my skills, achievements and projects. I believe in continuous learning and growth. Feel free to explore my portfolio and get in touch with me for collaborations.</p>
                     </div>
                     <a href="https://drive.google.com/file/d/19-XyLGUkHTnkwsKnJAAGFUAI0LEJniP3/view?usp=sharing" target= "_blank" class="btn">Download CV <i class="fas fa-download"></i></a>
                 </div>
